objects/SomeObject__c.object
<CustomObject>
    <fields>
        <fullName>CreateableNotUpdateable__c</fullName>
        <label>CreateableNotUpdateable</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MasterDetailToAccount__c</fullName>
        <label>MasterDetailToAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SomeObjects</relationshipLabel>
        <relationshipName>SomeObjects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MasterDetailToContactCanReparent__c</fullName>
        <label>MasterDetailToContactCanReparent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SomeObjects</relationshipLabel>
        <relationshipName>SomeObjects</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
                <value>
                    <fullName>b</fullName>
                </value>
                <value>
                    <fullName>c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SomeObject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SomeObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SomeObjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>